--- a/.dev.vars.example
+++ b/.dev.vars.example
@@ -3,13 +3,11 @@
 
 # Choose ONE provider key:
 # ANTHROPIC_API_KEY=sk-ant-...
-# OPENROUTER_API_KEY=sk-or-...
+OPENROUTER_API_KEY=sk-or-...
 # OPENAI_API_KEY=sk-...
-DEEPSEEK_API_KEY=sk-deepseek-...
 
-# Optional: override base URL
+# Optional: override base URL (OpenRouter default is https://openrouter.ai/api/v1)
 # OPENROUTER_BASE_URL=https://openrouter.ai/api/v1
-# DEEPSEEK_BASE_URL=https://api.deepseek.com/v1
 
 # Local development mode - skips Cloudflare Access auth and bypasses device pairing
 # DEV_MODE=true
