--- a/.dev.vars.example
+++ b/.dev.vars.example
@@ -2,10 +2,13 @@
 # .dev.vars is gitignored and used by wrangler dev
 
 # Choose ONE provider key:
+DEEPSEEK_API_KEY=sk-...
 # ANTHROPIC_API_KEY=sk-ant-...
-OPENROUTER_API_KEY=sk-or-...
+# OPENROUTER_API_KEY=sk-or-...
 # OPENAI_API_KEY=sk-...
 
+# Optional: override base URL (DeepSeek default is https://api.deepseek.com)
+# DEEPSEEK_BASE_URL=https://api.deepseek.com
 # Optional: override base URL (OpenRouter default is https://openrouter.ai/api/v1)
 # OPENROUTER_BASE_URL=https://openrouter.ai/api/v1
 
